more necessary options in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
-    "types": [
-      "lodash"
-    ],
+    "strict": true,
+    "target": "es6",
     "module": "commonjs",
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "types": [
+      "lodash"
+    ]
   },
   "files": [
     "hello.ts"
