--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "sourceMap": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
   "files": [
     "hello.ts"
