--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "demo": "ts-node hello.ts"
   },
   "devDependencies": {
+    "@types/node": "8.9.5",
     "ts-node": "7.0.1",
     "typescript": "3.2.2"
   }
