--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/puppeteer": "5.4.3",
     "child_process": "1.0.2",
     "ffmpeg": "0.0.4",
+    "fluent-ffmpeg": "2.1.2",
     "http-server": "0.12.3",
     "js-ffmpeg": "0.0.29",
     "ts-node": "8.6.2",
